# flask-microservices

./: .gitignore  Dockerfile  docker-compose.yaml  nginx.conf
auth_service/: Dockerfile  pyproject.toml
auth_service/auth_service/: main.py  migrate.py  models.py
cars_service/: Dockerfile  pyproject.toml
cars_service/cars_service/: main.py  migrate.py  models.py  serializer.py
posts_service/: Dockerfile  pyproject.toml
posts_service/posts_service/: main.py  migrate.py  models.py  serializer.py
